...
    <string name="fingerprint_apkcertificatedigestsha256">Fingerprint - ApkCertificateDigestSha256</string>
    <string name="fingerprint_sha256">Fingerprint - SHA256</string>
    <string name="fingerprint_sha1">Fingerprint - SHA1</string>
    <string name="md5">MD5</string>
    <string name="packagename">PackageName</string>
    <string name="communicate">Communicate</string>
    <string name="hello_message" translatable="false">Hello, there!</string>
    <string name="new_string" translatable="false">New string: %s</string>
    <string name="empty_string" translatable="false">empty string</string>
    <string name="progress_int" translatable="false">Progress: %d%%</string>
    <string name="canceled_int" translatable="false">%s canceled</string>
</resources>

